--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tailwindcss/forms": "0.2.1",
     "chart.js": "2.9.4",
     "html-dnd": "^1.2.1",
+    "log4js": "^6.5.2",
     "rxjs": "6.6.6",
     "tailwindcss": "2.0.4",
     "tslib": "2.1.0",
